MilestoneRFA_CM01/src/objects/Milestone1_Milestone__c.object
<CustomObject>
    <description>Force.com Labs - PM - Milestones are significant events in the life-cycle of a Project. Milestones can have tasks and sub-milestones associated with them.</description>
    <fields>
        <fullName>Actual_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense records related to tasks on child milestones</inlineHelpText>
        <label>Actual Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on this milestone</inlineHelpText>
        <label>Actual Expense From Tasks</label>
        <summarizedField>Milestone1_Task__c.Total_Expense__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from time records related to tasks on child milestones</inlineHelpText>
        <label>Actual Hours From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on this milestone</inlineHelpText>
        <label>Actual Hours From Tasks</label>
        <summarizedField>Milestone1_Task__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>This is the alias for a milestone.</description>
        <inlineHelpText>An alias helps you associate a task to a milestone using the single line entry home page component.</inlineHelpText>
        <label>Milestone Alias</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Blocked_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks are blocked in sub-milestones?</inlineHelpText>
        <label>Blocked Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocked_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Blocked Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Blocked__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complete_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of complete tasks related to sub-milestones</inlineHelpText>
        <label>Complete Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of complete tasks related to this milestone</inlineHelpText>
        <label>Complete Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This signifies that this milestone has been completed.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The date that this deadline needs to be finished by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the milestone.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c -  Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Expense From Tasks</label>
        <summarizedField>Milestone1_Task__c.Estimated_Expense__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Hours From Sub-Milestones</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Hours From Tasks</label>
        <summarizedField>Milestone1_Task__c.Estimated_Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expense_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget for the milestone.</inlineHelpText>
        <label>Milestone Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget all the sub milestones of this milestone.</inlineHelpText>
        <label>Expense Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The hours budget for the milestone.</inlineHelpText>
        <label>Milestone Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total hours budget for all the sub milestones for this milestone.</inlineHelpText>
        <label>Hours Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <inlineHelpText>An Import ID used during the XML export/import process only.</inlineHelpText>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>When should this milestone kickoff?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete and overdue tasks related to child milestones</inlineHelpText>
        <label>Late Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Tasks_2__c</fullName>
        <inlineHelpText>How many tasks are late?</inlineHelpText>
        <label>Late Tasks (in Tasks)2</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Days_Late__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone</inlineHelpText>
        <label>Late Tasks (in Tasks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Function__c</fullName>
        <description>プロジェクトfunctionと別のfunctionが管理する場合</description>
        <label>Milestone Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>違うFunctionの方がリーダーである場合にFunction をユーザ入力するフィールド。</description>
        <label>Milestone Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MilestoneLeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_No__c</fullName>
        <label>Milestone No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status_View__c</fullName>
        <formula>IMAGE( 
CASE(Milestone_Status__c, 
&quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, 
&quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, 
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), &quot;status color&quot; 
)</formula>
        <label>Milestone Status*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missed_Deadline_explanation__c</fullName>
        <label>Missed Deadline explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NameClean__c</fullName>
        <description>Formula designed to keep a Gantt safe chart name.  Note: this field may be discontinued.</description>
        <formula>SUBSTITUTE(Name, &apos;&quot;&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameClean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Okay_to_Reparent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to prevent users from manually moving Milestones to different Projects</description>
        <label>Okay to Reparent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Late_Blocked_Tasks__c</fullName>
        <formula>IF( max( Total_Open_Tasks__c, Total_Late_Tasks__c, Total_Blocked_Tasks__c) &gt; 0,
IMAGE(&quot;http://chart.apis.google.com/chart?chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Open_Tasks__c, Total_Late_Tasks__c, Total_Blocked_Tasks__c)) &amp; &quot;&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Tasks__c/ max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Tasks__c / max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Tasks__c/ max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100) , &quot;Project Status, Open Tasks, Late Tasks &amp; Blocked Tasks&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks  - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete tasks related to child milestones</inlineHelpText>
        <label>Open Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete tasks related to this milestone</inlineHelpText>
        <label>Open Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_vs_Complete_Tasks__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text( Total_Open_Tasks__c )&amp;&quot;,&quot;&amp;Text(Total_Complete_Tasks__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT(Total_Open_Tasks__c) &amp;&quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT(Total_Complete_Tasks__c) &amp;&quot;)&quot;
,&quot;Open vs. Complete Tasks&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks - Deprecated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent milestone for this milestone if applicable.</inlineHelpText>
        <label>Parent Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Child Milestones</relationshipLabel>
        <relationshipName>Child_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Prepare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_to_address_delays__c</fullName>
        <label>Plan to address delays</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone_Import_Id__c</fullName>
        <label>Predecessor_Milestone_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The milestone which must be complete before you start this one. The Predecessor Milestone end date must be before the current Milestone start date.</inlineHelpText>
        <label>Predecessor Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Successor Milestones</relationshipLabel>
        <relationshipName>Successor_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_Description__c</fullName>
        <label>Progress Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Progress(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Kickoff_Offset__c</fullName>
        <formula>NULLVALUE(Kickoff__c -  Project__r.Kickoff__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days after project kickoff does this milestone kickoff?</inlineHelpText>
        <label>Project Kickoff Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_No__c</fullName>
        <formula>Project__r.Project_No__c</formula>
        <label>Project No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The project this milestone is assigned to. If this is a sub-milestone this field is empty.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFA_Approved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA_Approved</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>マイルストーン</relationshipLabel>
        <relationshipName>RFA_Milestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RM_Adjustment_Date__c</fullName>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RM_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Milestone_No__c</fullName>
        <displayFormat>Milestone-P-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Milestone No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>BI 専用のフィールドである</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Expense__c</fullName>
        <formula>Actual_Expense_From_Tasks__c + Actual_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from expense records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Hours__c</fullName>
        <formula>Actual_Hours_From_Tasks__c + Actual_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from time records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Tasks__c</fullName>
        <formula>Blocked_Tasks_in_Tasks__c +  Blocked_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Total Blocked Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Tasks__c</fullName>
        <formula>Complete_Tasks_in_Tasks__c  +  Complete_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Complete Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Expense__c</fullName>
        <formula>Estimated_Expense_From_Tasks__c + Estimated_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <formula>Estimated_Hours_From_Tasks__c + Estimated_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Balance__c</fullName>
        <formula>Total_Estimated_Expense__c - Total_Actual_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated expense - total actual expense</inlineHelpText>
        <label>Total Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <formula>Expense_Budget__c +  Expense_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as expense budget + expense budget from sub milestones</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Balance__c</fullName>
        <formula>Total_Estimated_Hours__c - Total_Actual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated hours - total actual hours</inlineHelpText>
        <label>Total Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <formula>Hours_Budget__c + Hours_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as hours budget + hours budget from sub milestones</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Tasks__c</fullName>
        <formula>Late_Tasks_in_Tasks_2__c + Late_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Late Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Tasks__c</fullName>
        <formula>Open_Tasks_in_Tasks__c + Open_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Open Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>CokeOne_Implementation_Coca_Cola_East</fullName>
        <columns>NAME</columns>
        <columns>Parent_Milestone__c</columns>
        <columns>Project__c</columns>
        <columns>Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>startsWith</operation>
            <value>CokeOne Implementation</value>
        </filters>
        <label>CokeOne Implementation - Coca-Cola East</label>
        <language>en_US</language>
        <sharedTo>
            <group>CokeOne_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FP_Projects</fullName>
        <columns>NAME</columns>
        <columns>Parent_Milestone__c</columns>
        <columns>Project__c</columns>
        <columns>Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>startsWith</operation>
            <value>FP</value>
        </filters>
        <label>FP Projects</label>
        <language>en_US</language>
        <sharedTo>
            <group>FP_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RFA_Application_Phase1</fullName>
        <columns>NAME</columns>
        <columns>Parent_Milestone__c</columns>
        <columns>Project__c</columns>
        <columns>Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>RFA Application Phase1</value>
        </filters>
        <label>RFA Application Phase1</label>
        <language>en_US</language>
        <sharedTo>
            <group>RFA_Project_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RFA_Application_Phase15</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Parent_Milestone__c</columns>
        <columns>Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>RFA Application Phase1.5</value>
        </filters>
        <label>RFA Application Phase15</label>
        <language>en_US</language>
        <sharedTo>
            <group>RFA_Project_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I300000022xdvEAA_00N30000007czjLEAQ</fullName>
        <active>true</active>
        <field>Milestone1_Milestone__c.Parent_Milestone__c</field>
        <filterItems>
            <field>Milestone1_Milestone__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Milestone1_Milestone__c.Parent_Milestone__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <infoMessage>Parent Milestones must be part of the same project as the child milestone.  Also, Parent Milestone cannot also be a Child Milestone.</infoMessage>
        <isOptional>false</isOptional>
        <name>Milestone_Parent Milestone</name>
        <sourceObject>Milestone1_Milestone__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE0000000HT73MAG_00NE0000000nwUIMAY</fullName>
        <active>true</active>
        <field>Milestone1_Milestone__c.Predecessor_Milestone__c</field>
        <filterItems>
            <field>Milestone1_Milestone__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Milestone_Predecessor Milestone</name>
        <sourceObject>Milestone1_Milestone__c</sourceObject>
    </namedFilters>
    <pluralLabel>Milestones</pluralLabel>
    <recordTypes>
        <fullName>BusinessIntegration</fullName>
        <active>true</active>
        <description>BI専用</description>
        <label>Business Integration</label>
    </recordTypes>
    <recordTypes>
        <fullName>CokeOne</fullName>
        <active>true</active>
        <description>CokeOne専用</description>
        <label>CokeOne</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finance</fullName>
        <active>true</active>
        <description>Finance専用</description>
        <label>Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>General Users</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Development</fullName>
        <active>true</active>
        <description>Salesforce Dev Team</description>
        <label>Salesforce</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Alias_must_not_contain_spaces</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(TRIM(Alias__c ),&quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Alias__c</errorDisplayField>
        <errorMessage>The Milestone Alias cannot contain spaces.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CanNotAddSubmilestoneToParentCompleted</fullName>
        <active>true</active>
        <errorConditionFormula>Parent_Milestone__r.Complete__c</errorConditionFormula>
        <errorDisplayField>Parent_Milestone__c</errorDisplayField>
        <errorMessage>You can not add milestones to parent milestones with status completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotBeCompleteWithOpenTasks</fullName>
        <active>true</active>
        <errorConditionFormula>if( and(Complete__c == true, Total_Open_Tasks__c &gt; 0), true, false)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>You cannot mark a milestone as complete if it has open tasks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deadline_within_project_boundaries</fullName>
        <active>false</active>
        <errorConditionFormula>if ( and (Deadline__c &lt;&gt; null, Project__r.Deadline__c &lt;&gt;  null, Deadline__c &gt; Project__r.Deadline__c) , true, false)</errorConditionFormula>
        <errorDisplayField>Deadline__c</errorDisplayField>
        <errorMessage>Deadline must be less than or equal to the project deadline.</errorMessage>
    </validationRules>
</CustomObject>